--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "clsx": "^2.1.1",
     "firebase": "^10.11.1",
     "framer-motion": "^10.16.4",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/react": "18.3.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
