--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "firebase": "^10.11.1",
     "framer-motion": "^10.16.4",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
