secure firebase keys

--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
-AUTH_SECRET=AIzaSyCpBrXv7BdHEznfmFEybJxsbdpBqXuVzj0
+apiKey=AIzaSyB7Y_Au2sWWqH4mTHQD2jUUstgSBv0GWEs
+authDomain=engshots.firebaseapp.com
+projectId=engshots
+storageBucket=engshots.appspot.com
+messagingSenderId=820701706470
+appId=1:820701706470:web:7dc5b0b3c78c2fa5056327
+
+#  apiKey: "AIzaSyB7Y_Au2sWWqH4mTHQD2jUUstgSBv0GWEs",
+#   authDomain: "engshots.firebaseapp.com",
+#   projectId: "engshots",
+#   storageBucket: "engshots.appspot.com",
+#   messagingSenderId: "820701706470",
+#   appId: "1:820701706470:web:7dc5b0b3c78c2fa5056327"
